Improvements to mobile online competitions

--- a/app/assets/stylesheets/mobile/pages/_online_competition.scss
+++ b/app/assets/stylesheets/mobile/pages/_online_competition.scss
@@ -1,9 +1,9 @@
 .online-competition {
-  margin-top: 70px;
   padding-top: 5px;
 }
 
 .online-competition__header {
+  font-family: $pn-semibold, $fallback-fonts;
   font-size: 24px;
   line-height: 1.45;
   padding-left: 15px;
@@ -12,9 +12,10 @@
 
 .online-competition__subheader {
   color: lighten($main-text-color, 20%);
-  font-family: Georgia;
+  font-family: $pn-regular, $fallback-fonts;
   padding-left: 15px;
   padding-right: 15px;
+  margin-bottom: 15px;
 }
 
 .online-competition__table {
@@ -24,6 +25,7 @@
 
 .online-competition__personal-score {
   color: $table-text-color;
+  font-family: $pn-regular, $fallback-fonts;
   font-size: 18px;
 
   .td { vertical-align: middle; }
@@ -46,14 +48,14 @@
 }
 
 .online-competition__rank {
+  font-family: $pn-semibold, $fallback-fonts;
   font-size: 24px;
-  font-weight: bold;
   color: rgba($table-text-color, 0.8);
 }
 
 .online-competition__profile {
+  font-family: $pn-semibold, $fallback-fonts;
   font-size: 16px;
-  font-weight: bold;
 }
 
 .online-competition__suit-place {
