--- a/app/views/static_pages/index.html+mobile.haml
+++ b/app/views/static_pages/index.html+mobile.haml
@@ -14,8 +14,12 @@
         .landing__stats-caption Tracks recorded
 
   %section.text-center
-    = link_to new_registration_path(resource_name), class: 'btn btn-success btn-lg' do
-      = t('devise.shared.links.sign_up')
+    - if user_signed_in?
+      = link_to new_tracks_upload_path, class: 'btn btn-success btn-lg' do
+        %i.fa.fa-upload
+        = t('application.header.upload_track')
+    - else
+      = link_to t('devise.shared.links.sign_up'), new_registration_path(resource_name), class: 'btn btn-success btn-lg'
 
   %section.landing__section
     %h2.landing__section-header Полёты
