--- a/app/views/track_files/_new_modal.html.haml
+++ b/app/views/track_files/_new_modal.html.haml
@@ -1,4 +1,4 @@
-.modal.fade#newTrackModal{tabindex: '-1', role: 'dialog', aria: {labelledby: 'myModalLabel', hidden: 'true'}}
+.modal.fade#newTrackModal{tabindex: '-1', role: 'dialog', 'data-controller': 'modal'}
   .modal-dialog
     .modal-content
       = form_for :track_file,
@@ -7,7 +7,7 @@
                  html: { multipart: true,
                          class: 'form-horizontal',
                          role: 'form',
-                         id: 'track_upload_form' } do |f|
+                         'data-controller': 'tracks--form' } do |f|
 
         .modal-header
           %button.close{type: 'button', data: {dismiss: 'modal'}}
@@ -33,28 +33,29 @@
                     type: 'text',
                     value: recent_value(:name)
 
-            .form-group
+            - recent_suit_id = recent_value(:suit_id)
+            - recent_suit_name = recent_value(:suit_name)
+            - suit_mode = recent_suit_id || !recent_suit_name ? 'select' : 'text'
+            .form-group{'data-controller': 'tracks--suit-field', 'data-mode': suit_mode}
               = builder.label :suit, t('activerecord.attributes.track.suit'), class: 'col-sm-3 control-label'
               .col-sm-9
-                - recent_suit_id = recent_value(:suit_id)
-                - recent_suit_name = recent_value(:suit_name)
                 = builder.select :suit_id,
                                  options_for_select([ [suit_name_by_id(recent_suit_id), recent_suit_id] ], recent_suit_id),
                                  { include_blank: true },
                                  class: 'form-control new-track-suit-select suit-group',
-                                 style: ('display:none' if (!recent_suit_id && recent_suit_name)),
-                                 'data-controller': 'select2--suits'
+                                 'data-controller': 'select2--suits', 'data-target': 'tracks--suit-field.select'
 
                 = builder.text_field :missing_suit_name,
                                      class: 'form-control suit-group',
                                      placeholder: t('tracks.form.suit_text_placeholder'),
                                      value: recent_suit_name,
-                                     style: ('display:none' if (recent_suit_id || !recent_suit_name))
+                                     'data-target': 'tracks--suit-field.text'
 
               .col-sm-9.col-sm-offset-3
-                %span
-                  %span.toggle-suit-caption= t('tracks.form.toggle_suit_caption')
-                  %a.toggle-suit{href: '#'}= t('tracks.form.toggle_suit_link')
+                %p.help-block
+                  %span{'data-target': 'tracks--suit-field.caption'}= t('tracks.form.toggle_suit_caption')
+                  %a{'data-target': 'tracks--suit-field.link', 'data-action': 'tracks--suit-field#trigger', href: '#'}
+                    = t('tracks.form.toggle_suit_link')
 
             .form-group
               = builder.label :location, t('activerecord.attributes.track.place'), class: 'col-sm-3 control-label'
@@ -76,11 +77,12 @@
                 %span.input-group-btn
                   %span.btn.btn-default.btn-file
                     &hellip;
-                    = f.file_field :file, {'data-target': 'filefield.file_field', 'data-action': 'change->filefield#change'}
+                    = f.file_field :file,
+                                   { accept: '.csv,.gpx,.tes,.kml',
+                                     'data-target': 'filefield.file_field',
+                                     'data-action': 'change->filefield#change'}
 
-          .form-group
-            .col-sm-offset-3.col-sm-9
-              %h4.help-block=t 'static_pages.index.track_form.help'
+              %p.help-block=t 'static_pages.index.track_form.help'
 
           = f.fields_for :track_attributes do |builder|
             .form-group
@@ -94,10 +96,3 @@
         .modal-footer
           = f.submit t('static_pages.index.track_form.submit'), class: 'btn btn-success'
           %button.btn.btn-default{type: 'button', data: {dismiss: 'modal'}}=t('general.cancel')
-
-- content_for :page_js do
-  :javascript
-    new Skyderby.views.NewTrackForm({el: '#newTrackModal'});
-    $('#newTrackModal').on('shown.bs.modal', function() {
-      $('[data-target="#newTrackModal"]').one('focus', function() { $(this).blur(); });
-    });
