--- a/app/assets/stylesheets/mobile/pages/tracks/_track_header.scss
+++ b/app/assets/stylesheets/mobile/pages/tracks/_track_header.scss
@@ -1,12 +1,12 @@
 .track-header {
-  padding-top: 15px;
+  padding: 15px 10px 0 10px;
 
   display: flex;
   justify-content: flex-start;
 }
 
 .track-header__photo {
-  padding: 0 10px;
+  padding-right: 10px;
 
   img {
     height: 30px;
@@ -49,4 +49,8 @@
     color: #999;
     padding-right: 3px;
   }
+}
+
+.track-header__actions {
+  margin-left: auto;
 }
