--- a/app/assets/stylesheets/_flight_profiles.scss
+++ b/app/assets/stylesheets/_flight_profiles.scss
@@ -14,6 +14,7 @@
 
 .flight-profiles__sidebar {
   width: 30%;
+  height: 100%;
   padding-bottom: 55px;
   position: relative;
   border-right: rgba(0, 0, 0, 0.14) solid 1px;
@@ -38,6 +39,7 @@
 
 .flight-profiles__chart-container {
   width: 70%;
+  height: 100%;
   background-color: white;
 }
 
