--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
     = render 'layouts/head'
 
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag 'desktop/application', media: 'all', 'data-turbolinks-track': 'reload'
 
   %body
     #wrap{class: yield(:wrapper_classes)}
