--- a/app/assets/stylesheets/mobile/_header.scss
+++ b/app/assets/stylesheets/mobile/_header.scss
@@ -3,7 +3,7 @@
   height: 70px;
   overflow: hidden;
   position: fixed;
-  background: $sidebar-background;
+  background: $nav-background;
   z-index: 3;
 
   transition: all 500ms ease-in-out;
@@ -22,7 +22,7 @@
   align-items: center;
   position: relative;
   padding: 0 25px 0 20px;
-  background: $sidebar-background-light;
+  background: $nav-background-light;
 }
 
 .header__home {
@@ -73,7 +73,7 @@
     height: 4px;
     display: none;
     border-radius: 10px;
-    border: 2px solid $sidebar-background;
+    border: 2px solid $nav-background;
     background: $blue;
     position: absolute;
     top: 0px; right: -1px;
