--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,61 +1,47 @@
-.header.navbar.navbar-default.navbar-fixed-top{role: 'navigation'}
-  .container
-    .navbar-header
-      %button.navbar-toggle.collapsed{type: 'button', data: {toggle: 'collapse', target: '#skyderby-navbar-collapse'}}
-        %span.sr-only= 'Toggle navigation'
-        %span.icon-bar
-        %span.icon-bar
-        %span.icon-bar
-      = link_to 'SKY DERBY', root_path, class: 'navbar-brand'
+%navbar.navbar--fixed{role: 'navigation'}
+  = render 'layouts/header/navigation'
 
-    .navbar-collapse.collapse#skyderby-navbar-collapse
-      %ul.nav.navbar-nav
-        - root_controller = controller.controller_path.split('/').first
-        %li{class: ('nav-active' if root_controller == 'tracks')}
-          = link_to t('application.header.tracks'), tracks_path
-        %li{class: ('nav-active' if ['events', 'tournaments'].include? root_controller)}
-          = link_to t('application.header.competitions'), events_path
-        %li{class: ('nav-active' if root_controller == 'virtual_competitions')}
-          = link_to t('application.header.online_competitions'), virtual_competitions_path 
-        %li{class: ('nav-active' if root_controller == 'places')}
-          = link_to t('application.header.places'), places_path
+  %ul.nav-menu.nav-menu--right
 
-      %ul.nav.navbar-nav.navbar-right
+    - if user_signed_in?
+      %li
+        %a.nav-menu-cta.nav-menu-cta--primary{data: {toggle: 'modal', target: '#newTrackModal'}}
+          %i.fa.fa-upload
+          = t('application.header.upload_track')
 
-        %li.nav-upload-button{data: {toggle: 'tooltip', placement: 'left'}, title: t('application.header.upload_track')}
-          %a.btn.btn-default{href: '#', data: {toggle: 'modal', target: '#newTrackModal'}}
-            %i.fa.fa-upload
+      %li.nav-menu-spacer
 
-        - if user_signed_in?
-          %li.dropdown
-            %a.dropdown-toggle.profile-dropdown{href: '#', data: {toggle: 'dropdown'}}
-              - if masquerading?
-                %i.fa.fa-lg.fa-exclamation-triangle.text-danger
-              - if current_user.profile
-                = image_tag current_user.profile.userpic.url(:thumb), id: 'userpic-thumb', class: 'img-rounded img-50 loading-bg'
-              - else
-                = current_user.email
-                = image_tag '/images/thumb/missing.png', id: 'userpic-thumb', class: 'img-rounded img-50 loading-bg'
+      %li.dropdown
+        %a.dropdown-toggle.profile-dropdown{href: '#', data: {toggle: 'dropdown'}}
+          - if masquerading?
+            %i.fa.fa-lg.fa-exclamation-triangle.text-danger
+          - if current_user.profile
+            = image_tag current_user.profile.userpic.url(:thumb), id: 'userpic-thumb', class: 'nav-profile'
+          - else
+            = current_user.email
+            = image_tag '/images/thumb/missing.png', id: 'userpic-thumb', class: 'img-rounded img-50 loading-bg'
 
-            %ul.dropdown-menu
-              - if current_user.has_role? :admin
-                %li
-                  = link_to t('application.header.admin_panel'), manage_path
-              - if masquerading?
-                %li
-                  = link_to 'Stop masquerading', user_masquerades_path(current_user), method: :delete
-              %li
-                = link_to t('application.header.profile'), profile_path(current_user.profile)
-              %li
-                = link_to t('application.header.sign_out'), destroy_user_session_path, method: :delete
-        - else
+        %ul.dropdown-menu.dropdown-menu-right
+          - if current_user.has_role? :admin
+            %li
+              = link_to t('application.header.admin_panel'), manage_path
+          - if masquerading?
+            %li
+              = link_to 'Stop masquerading', user_masquerades_path(current_user), method: :delete
           %li
-            = link_to t('application.header.sign_in'), new_user_session_path
-          %li.hidden-sm.sign-in
-            = link_to t('application.header.sign_up'), new_user_registration_path
+            = link_to t('application.header.profile'), profile_path(current_user.profile)
+          %li
+            = link_to t('application.header.sign_out'), destroy_user_session_path, method: :delete
+    - else
+      %li
+        = link_to t('application.header.sign_in'), new_user_session_path, class: 'nav-menu-cta nav-menu-cta--secondary'
+      %li
+        = link_to t('application.header.sign_up'), new_user_registration_path, class: 'nav-menu-cta nav-menu-cta--secondary'
 
-        %li.dropdown
-          %a.dropdown-toggle.locale-dropdown{href: '#', data: {toggle: 'dropdown'}}
-            = image_tag asset_path('blank.gif'), class: "flag flag-#{ I18n.locale}"
-            %i.fa.fa-caret-down
-          = lang_menu
+      %li.nav-menu-spacer
+
+    %li.dropdown
+      %a.dropdown-toggle.locale-dropdown{href: '#', data: {toggle: 'dropdown'}}
+        = image_tag asset_path('blank.gif'), class: "flag flag-#{ I18n.locale}"
+        %i.fa.fa-caret-down
+      = lang_menu
