Small layout refactoring

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -35,6 +35,7 @@ $nav-background-light: #2a3544;
 
 $main-text-color: #333;
 $light-text-color: #555;
+$dark-gray-text: #777;
 $gray-text-color: $gray;
 $table-text-color: $main-text-color;
 
