--- a/app/views/static_pages/_index_header.html.haml
+++ b/app/views/static_pages/_index_header.html.haml
@@ -1,4 +1,4 @@
-%navbar.navbar--transparent.navbar--top{role: 'navigation'}
+%header.navbar.navbar--transparent.navbar--top{role: 'navigation'}
   = render 'layouts/header/navigation'
 
   %ul.nav-menu.nav-menu--right
