--- a/app/assets/stylesheets/desktop/navbar/_navbar.scss
+++ b/app/assets/stylesheets/desktop/navbar/_navbar.scss
@@ -2,7 +2,7 @@
 @import './menu';
 @import './profile';
 
-navbar {
+.navbar {
   background-color: $nav-background;
   box-shadow: 0 1px 2px 0 $box-shadow-dark;
   display: flex;
