--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,4 +1,4 @@
-%navbar.navbar--fixed{role: 'navigation'}
+%header.navbar.navbar--fixed{role: 'navigation'}
   = render 'layouts/header/navigation'
 
   %ul.nav-menu.nav-menu--right
