--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -39,6 +39,8 @@ $dark-gray-text: #777;
 $gray-text-color: $gray;
 $table-text-color: $main-text-color;
 
+$background-main: $white;
+
 $border-color: rgba(0, 0, 0, .14);
 $box-shadow-dark: rgba(0, 0, 0, .08);
 $box-shadow-light: rgba(255, 255, 255, .7);
