--- a/app/assets/stylesheets/desktop/application.scss
+++ b/app/assets/stylesheets/desktop/application.scss
@@ -2,6 +2,7 @@
 @import '../variables';
 @import './navbar/navbar';
 @import './footer/footer';
+@import './layout/fullscreen';
 
 a {
   cursor: pointer;
