--- a/app/views/events/scoreboards/_speed_distance_time.html.haml
+++ b/app/views/events/scoreboards/_speed_distance_time.html.haml
@@ -22,7 +22,7 @@
                         %i.fa.fa-ellipsis-v.text-muted
                       %ul.dropdown-menu.dropdown-menu-right
                         %li
-                          = link_to event_round_map_path(@event, round), remote: true, class: 'round-map-view', rel: 'nofollow' do
+                          = link_to event_round_map_path(@event, round), rel: 'nofollow' do
                             %i.far.fa-compass.text-muted
                             Google maps
                         %li
