--- a/app/assets/stylesheets/events/rounds/_map.scss
+++ b/app/assets/stylesheets/events/rounds/_map.scss
@@ -1,61 +1,71 @@
-.round-map {
+.events-rounds-map {
+  flex-grow: 1;
+  margin-bottom: 15px;
+  position: relative;
+}
 
+.events-rounds-map-competitors {
+  background-color: $background-main;
+  border-left: $border-color 1px solid;
+  padding: 15px;
+}
+
+.events-rounds-map-second-row {
+  color: $dark-gray-text;
+  padding-top: 5px;
+}
+
+.round-map-loading {
+  background-color: rgba(255, 255, 255, 0.87);
+  width: 100%;
   height: 100%;
+  position: absolute;
+  z-index: 1142;
+  text-align: center;
+  top: 0;
+  bottom: 0;
+  padding-top: 200px;
+}
 
-  #round-map {
-    height: 90vh;
-    min-height: 100%;
-    width: 100%;
-    position: relative;
+.round-competitors-wrap {
+  width: 33%;
+  overflow-y: scroll;
+}
+
+table.round-competitors {
+
+  thead tr {
+    font-size: 12px;
   }
 
-  .round-map-loading {
-      background-color: rgba(255, 255, 255, 0.87);
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      z-index: 1142;
-      text-align: center;
-      top: 0;
-      bottom: 0;
-      padding-top: 200px;
+  tr.disabled {
+    color: rgb(221, 221, 221);
   }
 
-  .round-competitors-wrap {
-    width: 33%;
-    overflow-y: scroll;
+  tr > td:nth-child(1) {
+    width: 25px;
   }
 
-  .round-competitors__list-commands {
-    padding: 7px 0;
-  }
+  .round-map-competitor {
+    border-bottom: none;
 
-  table.round-competitors {
-
-    tr.disabled {
-      color: rgb(221, 221, 221);
+    .fa {
+      font-size: 10px;
+      line-height: 20px;
+      vertical-align: bottom;
     }
-
-    tr > td:nth-child(1) {
-      width: 25px;
-    }
-
-    td.round-map-competitor {
-        padding-left: 7px;
-    }
-
   }
-
 }
 
 .round-map__reference-point {
+  display: flex;
+  justify-content: space-between;
   font-size: 12px;
   color: #777;
   line-height: 22px;
 
   & > a {
     cursor: pointer;
-    float: right;
   }
 }
 
@@ -77,16 +87,18 @@ table.round-competitors td.round-competitors__check {
 }
 
 @keyframes placeHolderShimmer{
-  0%{
-    background-position: -820px 0
+  0% {
+    background-position: -820px 0;
   }
-  100%{
-    background-position: 820px 0
+
+  100% {
+    background-position: 820px 0;
   }
 }
 
 .round-map__legend-item {
-  padding-top: 10px;
+  font-size: 12px;
+  color: $light-text-color;
 }
 
 .round-map__legend-item > i.fa {
