Better round map design and applying penalies from it. Fix #139

--- a/app/assets/stylesheets/desktop/footer/_footer.scss
+++ b/app/assets/stylesheets/desktop/footer/_footer.scss
@@ -1,6 +1,6 @@
 footer {
   background-color: $white;
-  border: 1px solid $border-color;
+  border-top: 1px solid $border-color;
   color: $dark-gray-text;
   display: flex;
   font: 14px / 40px $pn-regular, $fallback-fonts;
