--- a/app/views/events/results/penalties/_penalties_form.html.haml
+++ b/app/views/events/results/penalties/_penalties_form.html.haml
@@ -1,21 +1,23 @@
 - show_cancel ||= false
+- show_delete_button ||= false
 - local ||= false
+- url ||= event_result_penalty_path(result.event, result)
 
-= form_for :penalty, url: event_result_penalty_path(@result.event, @result), method: :put, remote: !local, html: { class: 'form-horizontal' } do |f|
+= form_for :penalty, url: url, method: :put, remote: !local, html: { class: 'form-horizontal' } do |f|
   .form-group
     -# i18n-tasks-use t('helpers.label.penalty.penalized')
     = f.label :penalized, class: 'control-label col-sm-4'
     .col-sm-8
       .checkbox
         %label
-          = f.check_box :penalized, checked: @result.penalized
+          = f.check_box :penalized, checked: result.penalized
 
   .form-group
     -# i18n-tasks-use t('helpers.label.penalty.penalty_size')
     = f.label :penalty_size, class: 'control-label col-sm-4'
     .col-sm-8.btn-group{'data-toggle': 'buttons'}
-      - @result.penalty_sizes.each do |penalty_size|
-        %label.btn.btn-default{class: ('active' if @result.penalty_size == penalty_size)}
+      - result.penalty_sizes.each do |penalty_size|
+        %label.btn.btn-default{class: ('active' if result.penalty_size == penalty_size)}
           = f.radio_button :penalty_size, penalty_size
           = "#{penalty_size} %"
 
@@ -23,12 +25,13 @@
     -# i18n-tasks-use t('helpers.label.penalty.penalty_reason')
     = f.label :penalty_reason, class: 'control-label col-sm-4'
     .col-sm-8
-      = f.text_field :penalty_reason, class: 'form-control', value: @result.penalty_reason
+      = f.text_field :penalty_reason, class: 'form-control', value: result.penalty_reason
 
   %hr
   .modal-actions
     .modal-actions__left
-      = delete_event_track_link(@result)
+      - if show_delete_button
+        = delete_event_track_link(result)
 
     .modal-actions__right
       = f.submit t('general.save'), class: 'btn btn-primary'
