Track range buttons and minor charts styling. Fixes #142

--- a/app/assets/stylesheets/desktop/application.scss
+++ b/app/assets/stylesheets/desktop/application.scss
@@ -3,6 +3,7 @@
 @import './navbar/navbar';
 @import './footer/footer';
 @import './layout/fullscreen';
+@import './highcharts';
 
 a {
   cursor: pointer;
