--- a/app/assets/stylesheets/_tracks.scss
+++ b/app/assets/stylesheets/_tracks.scss
@@ -76,11 +76,13 @@
 #glideratio_chart {
     width:100%;
     height:300px;
+    margin-bottom: 15px;
 }
 
 #speeds_chart {
     width:100%;
     height:400px;
+    margin-bottom: 15px;
 }
 
 #elevation_distance_chart {
