--- a/app/views/charts/elevation_chart_options.js.erb
+++ b/app/views/charts/elevation_chart_options.js.erb
@@ -1,6 +1,7 @@
 {
   chart: {
     type: 'spline',
+    styledMode: true,
     marginLeft: 70,
     events: {
       load: function() {
@@ -9,7 +10,8 @@
     }
   },
   title: {
-    text: '<%= t('charts.elev.title') %>'
+    text: '<%= t('charts.elev.title') %>',
+    style: { color: '#777', fontSize: '16px' }
   },
   plotOptions: {
     spline: {
