--- a/app/views/charts/glide_ratio_options.js.erb
+++ b/app/views/charts/glide_ratio_options.js.erb
@@ -2,6 +2,7 @@
 {
   chart: {
     type: 'spline',
+    styledMode: true,
     marginLeft: 70,
     events: {
       load: function() {
@@ -10,7 +11,8 @@
     }
   },
   title: {
-    text: '<%= t('charts.gr.title') %>'
+    text: '<%= t('charts.gr.title') %>',
+    style: { color: '#777', fontSize: '16px' }
   },
   plotOptions: {
     spline: {
